welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:5: error: type mismatch;
 found   : Unit
 required: Boolean
	else if ((a<13 && a>19)||(b<13 && b>19)&&(c<13 && c>19)) {
             ^